Fix a minor bug of heading text alignment

--- a/src/sass/content/_heading.scss
+++ b/src/sass/content/_heading.scss
@@ -3,7 +3,7 @@
  * Heading Style
  *
  * @author Takuto Yanagida @ Space-Time Inc.
- * @version 2018-11-07
+ * @version 2018-11-08
  *
  */
 
@@ -28,7 +28,10 @@ $stile-heading-color-text: rgba(#000, 0.95) !default;
 
 		> small { display: block; }
 		&:not([class]) span { display: inline-block; }
-		div:not([class]) { line-height: inherit; }
+		div:not([class]) {
+			line-height: inherit;
+			text-align: inherit;
+		}
 	}
 
 	h1 { @include font-size-level(6); }
